Mass replace `collect(Collectors.toList())` -> `toList()`